--- a/css/main.css
+++ b/css/main.css
@@ -1,63 +1,68 @@
-:root{
-    --main:#d79921;
-    --light:#fbf1c7;
-    --dark:#1d2021;
-    --red:#cc241d;
-    --green:#98971a;
-    --smooth:#504945;
-    --light-grey:#a8998a;
+:root {
+    --main: #d79921;
+    --light: #fbf1c7;
+    --dark: #1d2021;
+    --red: #cc241d;
+    --green: #98971a;
+    --smooth: #504945;
+    --light-grey: #a8998a;
 }
-body{
-    
-    margin:0;
-    padding:0;
+* {
+    margin: unset;
+    padding: unset;
+    box-sizing: border-box;
+    text-decoration: unset;
+    color: unset;
+}
+body {
+    margin: 0;
+    padding: 0;
     font-family: 'Ubuntu', sans-serif;
     background-color: var(--light-grey);
-    color:var(--dark);
+    color: var(--dark);
     padding: 0 5vw;
 }
-main{
-    display:flex;
-    width:fit-content;
-    margin:0 auto;
+main {
+    display: flex;
+    width: fit-content;
+    margin: 0 auto;
 }
 
-.header{
+.header {
     width: fit-content;
     height: 100vh;
-    margin:0;
+    margin: 0;
 }
 
-.header>h1{
+.header > h1 {
     font-family: 'Anton', sans-serif;
     font-size: 14vh;
-    text-align:center;
-    margin:0.6em 0;
-    writing-mode:vertical-lr;
+    text-align: center;
+    margin: 0.6em 0;
+    writing-mode: vertical-lr;
     transform: rotate(180deg);
-
 }
 
-.main{
-    max-width:70vw;
-    margin:0 0;
+.main {
+    max-width: 70vw;
+    margin: 0 0;
 }
 
-.posts{
-    display:flex;
+.posts {
+    display: flex;
     flex-direction: column;
     width: 90%;
     height: 95%;
-    margin:auto;
+    margin: auto;
     padding: 0.5em 1em;
     background-color: var(--smooth);
     border-radius: 7.5px;
 }
 
-.post{
-    display:flex;
+.post {
+    display: flex;
     background-color: var(--dark);
-    
+
     width: 95%;
     height: fit-content;
     padding: 1em;
@@ -65,58 +70,95 @@ main{
     margin: 0.5em auto;
 }
 
-.post--content{
+.post--content {
     display: flex;
-    width:90%;
+    width: 90%;
     flex-direction: column;
-    
 }
-.post--content> button{
-    width:100%;
+.post--content > button {
+    width: 100%;
     padding: 0.2em 0;
     background-color: #0000;
-    border:none;
-    
+    border: none;
 }
-.post--content--title{
+.post--content--title {
     text-align: left;
     font-size: x-large;
     font-weight: 700;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    color:var(--main) ;
+    color: var(--main);
 }
-.post--content--body{
+.post--content--body {
     text-align: left;
-    font-size:large;
+    font-size: large;
     font-weight: 400;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    color:var(--light);
+    color: var(--light);
 }
 
-.post--buttons{
+.post--buttons {
     display: flex;
-    width:10%;
+    width: 10%;
     justify-content: space-evenly;
 }
 
-.post--buttons--edit, .post--buttons--delete{
-    border:none;
+.post--buttons--edit,
+.post--buttons--delete {
+    border: none;
     height: fit-content;
     width: fit-content;
-    margin:auto;
+    margin: auto;
     border-radius: 50%;
-    
+
     padding: 0.5em;
 }
-.post--buttons--edit{
+.post--buttons--edit {
     background-color: var(--green);
-    
 }
-.post--buttons--delete{
+.post--buttons--delete {
     background-color: var(--red);
+}
+
+/* modal */
+.modal {
+    background-color: black;
+}
+.modal--container {
+    position: fixed;
+    background-color: var(--light-grey);
+    border-radius: 5px;
+    top: 0;
+    left: 0;
+    transform: translate(calc(50vw - 50%), calc(50vh - 50%));
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+}
+.modal--buttons--close {
+    float: right;
+    border: none;
+    font-size: 2em;
+    background-color: transparent;
+}
+.modal-post {
+    display: flex;
+    flex-direction: row;
+}
+
+.modal--post--title {
+    font-size: 2.5em;
+}
+.modal--user {
+    font-size: 1.5em;
+}
+.modal--username {
+    font-size: 1.5em;
+}
+.modal--mail {
+    font-size: 1.5em;
 }
 
