--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ main{
 
 .header > h1 {
     font-family: 'Anton', sans-serif;
-    font-size: 14vh;
+    font-size: 14.2457vh;
     text-align: center;
     margin: 0.6em 0;
     writing-mode: vertical-lr;
@@ -67,14 +67,11 @@ main{
     display:flex;
     flex-direction: column;
     background-color: var(--dark);
-    width: 32%;
+    width: 32.3333%;
     height: fit-content;
     padding: 1%;
     border-radius: 7.5px;
     margin: 0.5em 0.5%;
-}
-.post:last-child{
-    margin-bottom: 2em;
 }
 
 .post>img{
@@ -128,6 +125,7 @@ main{
     height:fit-content;
     width: fit-content;
     margin:0.2em;
+    margin-top:0.5em;
     border-radius: 10%;
     padding: 0.2em;
     transition: height 1s ease-in-out;
@@ -164,7 +162,9 @@ main{
 .shadows{
     box-shadow: 2px 2px 4px #000000;
 }
-
+.disaled{
+    opacity:0.5;
+}
 
 ::-webkit-scrollbar {
     width: 10px;
