--- a/css/main.css
+++ b/css/main.css
@@ -188,7 +188,6 @@ main {
 .modal--post--body {
     all: unset;
     font-size: 1.10em;
-    border: 5px solid red;
     width: 100%;
     height: 80%;
     margin: 1em 0em;
@@ -208,6 +207,9 @@ main {
 .modal--image {
     background: transparent url(/srt/img/loading.gif);
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    min-width: 500px;
 }
 .modal--comments button {
     all: unset;
