--- a/css/main.css
+++ b/css/main.css
@@ -148,12 +148,15 @@ main {
 }
 /* modal */
 .modal {
-    position: fixed;
+    position: absolute;
     background-color: var(--dark);
     height: 100vh;
     border-left: 5px solid var(--light-grey);
     right: 0;
     max-width: 81%;
+    transition: right 1s ease-in-out;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 .modal--buttons--close {
     background-color: transparent;
@@ -169,29 +172,40 @@ main {
 }
 .modal--post--content {
     flex: 1;
+    padding: 0 2em;
 }
 .modal--post img {
     margin: 0 auto;
     border-radius: 5px;
-    flex: 0.7;
+    width: 50%;
+    height:auto;
     max-height: 500px;
+    max-width: 500px;
 }
 .modal--post--title {
-    font-size: 2em;
+    font-size: xx-Large;
     text-align: center;
-    margin: 0.5em 0;
+    text-transform: capitalize;
+    font-weight: 700;
+    color: var(--main);
 }
 .modal--post--body {
     margin: 1em 0.5em;
+    text-align: justify;
+    text-transform: capitalize;
+    font-weight: 700;
 }
-.modal--user {
-    font-size: 1.5em;
+.modal--username {
+    margin: 0 0.25em;
+    font-size: 2em;
 }
 .modal--mail {
-    font-size: 1.3em;
+    margin: 0 0.5em;
+    font-size: 1em;
 }
 .modal--comments {
     padding: 2em;
+    
 }
 .modal--comments button {
     all: unset;
@@ -200,12 +214,41 @@ main {
     padding: 0.2em 0.5em;
     border-radius: 7.50px;
     transition: 0.5s;
+    cursor:pointer;
 }
 .modal--comments button:active {
     transform: translateY(2px);
     transform: translateX(2px);
     font-size: 1.35em;
     transition: 0s;
+}
+.modal--comments--container{
+    padding: 1em 0 0 0;
+    display:flex;
+    flex-direction: column;
+}
+
+.comment{
+    background-color: var(--dark);
+    border: 2px solid var(--light-grey);
+    border-radius: 7.50px;
+    padding: 0.7em 1.4em;
+    margin:1em 0;
+}
+
+.comment--header{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+.comment--title{
+    color:var(--main);
+    font-size: x-Large;
+    text-transform: capitalize;
+}
+.comment--body{
+    font-size: 1.4em;
 }
 
 .clickable {
@@ -247,5 +290,5 @@ main {
 }
 
 .none {
-    display: none;
+    right:-81vw;
 }
